Fix some spacing and sizing issues in header

--- a/source/_assets/sass/_header.scss
+++ b/source/_assets/sass/_header.scss
@@ -12,7 +12,7 @@ header {
 
 	// Header is too large at smallest breakpoint
 	// This will scale it down, then up smoothly
-	$font-min: 0.8em;
+	$font-min: 0.95em;
 	$font-max: 1em;
 
 	font-size: $font-min;
@@ -102,12 +102,12 @@ header {
 
 			transition: height 0.25s, width 0.25s;
 
-			height: calc( 28px + 0.8em );
-			width: calc( 28px + 0.8em );
+			width: 3.25em;
+			height: 3.25em;
 
 			@media (min-width: 420px) {
-				width: 3.25em;
-				height: 3.25em;
+				// width: 3.25em;
+				// height: 3.25em;
 			}
 
 			img {
@@ -155,11 +155,11 @@ header {
 				font-family: 'GaramondMTPro', serif;
 				font-style: italic;
 
-				letter-spacing: em(0.76);
+				letter-spacing: em(0.12);
 
-				// font-size: 1.4em;
+				font-size: 0.95em;
 
-				margin-top: 0.4em;
+				margin-top: 0.5em;
 
 				color: #fff;
 
@@ -223,11 +223,11 @@ header {
 			// right: 1em;
 
 			background-color: $color-orange;
-			height: 3em;
-			width: 3em;
+			height: 2.75em;
+			width: 2.75em;
 
 			border-radius: 50%;
-			padding: 0.35em;
+			padding: 0.55em;
 
 			img {
 				height: 100%;
@@ -253,17 +253,17 @@ header {
 		font-weight: bold;
 
 		text-transform: uppercase;
-		letter-spacing: em(0.04);
+		letter-spacing: em(0.20);
 		color: $color-green;
 
-		padding: 0.4em 0.4em 0.3em;
+		padding: 0.55em 0.4em 0.3em;
 		width: 100%;
 		z-index: 2;
 
 		white-space: normal;
 
 		// Needs adjustment due to header scaling
-		$font-min: 1em;
+		$font-min: 0.75em;
 		$font-max: 0.65em;
 
 		font-size: $font-min;
@@ -291,10 +291,5 @@ header {
 			padding: 0.5em 0;
 		}
 
-		// Match buttons w/ constant padding
-		.header-left a {
-			height: calc( 28px + 0.8em );
-			width: calc( 28px + 0.8em );
-		}
 	}
 }
